--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -23,4 +23,9 @@ html, body {
 #full-page-wrapper {
   width: 100%;
   height: 100%;
+  background-position: center;
+  background-size: cover; /* Add this to achieve the zoom effect */
+  display: flex;
+  justify-content: center;
+  align-items: center;  
 }
