--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,9 @@
 @import './base.css';
 
+.bordered-text {
+    -webkit-text-stroke: 2px black;
+    /* text-shadow: 0 0 5px black; */
+  }
 
 @media (min-width: 1024px) {
 
