--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -5,26 +5,24 @@ body {
   font-size: 15px;
 }
 
-/* Apply styles to make body and html fill the full screen */
 html, body {
   margin: 0;
   padding: 0;
   height: 100%;
 }
 
-/* Set the full-page-wrapper to take up full height and width */
 #app {
   height: 100%;
   display: flex;
-  justify-content: center; /* Optional: To center the content horizontally */
-  align-items: center; /* Optional: To center the content vertically */
+  justify-content: center;
+  align-items: center;
 }
 
 #full-page-wrapper {
   width: 100%;
   height: 100%;
   background-position: center;
-  background-size: cover; /* Add this to achieve the zoom effect */
+  background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;  
