--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,9 +1,12 @@
 @import './base.css';
 
 .bordered-text {
-    -webkit-text-stroke: 2px black;
-    /* text-shadow: 0 0 5px black; */
-  }
+  -webkit-text-stroke: 2px black;
+}
+
+.bg-white-transparent {
+  background-color: rgba(255, 255, 255, 0.5);
+}
 
 @media (min-width: 1024px) {
 
