Colour tweaks & logout

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -33,7 +33,7 @@ html, body {
 .form-control:focus,
 input:focus {
   outline-width: 0;
-  caret-color: #fff;
+  /* caret-color: #fff; */
   box-shadow: none;
   border: 0
 }
