--- a/src/assets/custom.scss
+++ b/src/assets/custom.scss
@@ -3,3 +3,21 @@ $primary: #7DC4E4;
 $secondary: #B8C0E0;
 
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
+
+
+
+.list-group-mine .list-group-item {
+    color: rgba(var(--bs-light-rgb), var(--bs-border-opacity)) !important;
+}
+
+.form-control {
+    background-color: rgba(var(--bs-dark-rgb), var(--bs-border-opacity)) !important;
+    border-color: rgba(var(--bs-primary-rgb), var(--bs-border-opacity)) !important;
+    color: rgba(var(--bs-light-rgb), var(--bs-border-opacity)) !important;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-radius: 0;
+    margin-bottom: 10px;
+}
+
